# agentry

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: agentry-bug-fix.yml  agentry-code-review.yml  agentry-feature-implement.yml  agentry-issue-triage.yml  agentry-planning-pipeline.yml  ci.yml  pages.yml
docs/: BACKLOG.md  E2E-TEST-PLAN.md  RFC-SELF-HOSTING.md
docs/demo/: DEMO-SCRIPT.md  slides.html
docs/specs/01-spec-agentry-cli/: 01-spec-agentry-cli.md  01-validation-agentry-cli.md  cli-framework-and-output-formatting.feature  llm-integration-and-agent-execution.feature  local-environment-binder-and-input-resolution.feature  output-validation-pipeline.feature  research-general.md  standard-workflow-library.feature  workflow-definition-parser-and-validator.feature
docs/specs/02-spec-agentry-sandbox/: 02-spec-agentry-sandbox.md  02-validation-agentry-sandbox.md  docker-sandbox-engine.feature  network-isolation-dns-filtering.feature  preflight-checks.feature  security-envelope-setup-phase.feature  workflow-definition-signing.feature
docs/specs/03-spec-agentry-composition/: 03-questions-1-agentry-composition.md  03-spec-agentry-composition.md  03-validation-agentry-composition.md  cli-integration-and-composed-workflow-execution.feature  composition-model-extension-and-dag-validation.feature  (+3 more)
src/agentry/: __init__.py  cli.py  executor.py  output.py  parser.py
tests/: __init__.py
tests/e2e/: test_public_surface.py
tests/fixtures/: invalid-workflow.yaml  valid-workflow.yaml
tests/integration/: __init__.py  test_ci_generate_e2e.py  test_composition_pipeline.py  test_issue_tools.py  test_issue_triage_pipeline.py  test_network_isolation.py  test_pr_create.py
tests/unit/: __init__.py  test_agent_executor.py  test_agent_protocol.py  test_ci_generate.py  test_ci_generate_cli.py  test_ci_generate_code_review.py  test_ci_runtime.py  test_cli.py  test_cli_composition.py  test_cli_single_workflow.py  test_composition_engine.py  test_composition_model.py  test_composition_record.py  test_data_passing.py  test_dns_proxy.py  test_docker_runner.py  test_failure_policies.py  test_git_diff_resolution.py  test_github_binder_inputs.py  test_github_binder_outputs.py  test_github_binder_tools.py  test_github_token_check.py  test_in_process_runner.py  test_input_resolution.py  test_issue_output_formatting.py  test_layer3_and_pipeline.py  test_llm_client.py  test_local_binder.py  test_network_isolation_verification.py  test_network_manager.py  test_output_formatting.py  test_output_validator.py  test_parser.py  test_partial_results.py  test_preflight.py  test_preflight_all_failures.py  test_preflight_checks.py  test_runner_detector.py  test_runner_protocol.py  test_security_audit.py  (+10 more)
workflows/: README.md  bug-fix.yaml  code-review.yaml  feature-implement.yaml  planning-pipeline.yaml  task-decompose.yaml  triage.yaml
workflows/prompts/: bug-fix-system-prompt.md  code-review.md  feature-implement-system-prompt.md  task-decompose-system-prompt.md  triage-system-prompt.md
(+395 files in other folders)
